correct search response like an array
