# examples/todo/app/Dto/ApiDto/SearchUserResponseItem.php
@@ -4,7 +4,7 @@ use App\Dto\ModelDto\UserDto;
 
 class SearchUserResponseItem extends UserDto
 {
-    public UserDto $owner;
+
 }
 
 
@@ -14,13 +14,12 @@ class SearchUserResponseItem extends UserDto
  *     type="object",
  *     title="SearchUserResponseItem",
  *     properties = {
- *                  @OA\Property(property="owner", type="object", ref="#/components/schemas/UserDto"),
- *                  @OA\Property(property="id", type="string"),
- *                  @OA\Property(property="name", type="string"),
- *                  @OA\Property(property="email", type="string"),
- *                  @OA\Property(property="password", type="string"),
- *                  @OA\Property(property="created_at", type="string"),
- *                  @OA\Property(property="updated_at", type="string"),
- *              }
+ *         @OA\Property(property="id", type="string"),
+ *         @OA\Property(property="name", type="string"),
+ *         @OA\Property(property="email", type="string"),
+ *         @OA\Property(property="password", type="string"),
+ *         @OA\Property(property="created_at", type="string"),
+ *         @OA\Property(property="updated_at", type="string")
+ *     }
  * )
  */
